# haskell-book-exercises

./: .gitmodules
03-Strings/: print2.hs
06-Typeclasses/: writing_typeclass_instances.hs
07-MoreFunctionalPatterns/: arith2.hs
08-Recursion/: bottom.hs  fibonacci.hs
09-Lists/: list_pattern_matching.hs  standard_functions.hs
10-FoldingLists/: 1010_chapter_exercises.hs  database_processing.hs  scans.hs
11-AlgebraicDatatypes/: binary_tree.hs  constructing_and_deconstructing_values.hs  huttons_razor.hs  phone.hs  sum_and_product.hs  sum_product_normal_form.hs  vehicle.hs
12-SignalingAdverity/: binary_tree_2.hs  chapter_12_exercises.hs  either_person.hs
13-BuildingProjects/: chapter13-exercises.hs
14-Testing/Addition/: Addition.hs  addition.cabal
15-MonoidSemigroup/: Madness.hs  OptionalMonoid.hs
16-Functor/: ChapterExercises.hs  Exercise-Possibly.hs  ExercisesInstancesOfFunc.hs  ReplaceExperience.hs  testfunct.hs
17-Applicative/: ApplicativeChapterExercises.hs  IdentityInstance.hs  ListApplicative.hs  UsingMaybeApplicative.hs  Validation.hs  ZipListApplicative.hs
18-Monad/: ImplementEitherMonad.hs  MonadChapterExercises.hs  UsingEitherMonad.hs  UsingMaybeMonad.hs
20-Foldable/: FoldableChapterExercises.hs
21-Traversable/: TraversableChapterExercises.hs
22-Reader/: ExerciseReadingComprehension.hs  ReaderChapterExercises.hs  WarmingUp.hs  bipboop.hs
25-ComposingTypes/: Bifunctor.hs  IdentityT.hs  Twinplicative.hs  test.hs
26-MonadTransformers/: ChapterExercises.hs  EitherT.hs  ExerciseEmbedded.hs  FixTheCode.hs  MaybeT.hs  MonadIOInstances.hs  MonadTransInstances.hs  ReaderT.hs  StateT.hs
27-Nonstrictness/: ExerciseEvaluate.hs
28-BasicLibraries/: DifferenceList.hs
29-IO/: IORefTrans.hs  NestedIO.hs  Trace.hs
3-Strings/: building_functions.hs  print3flipped.hs  reverse.hs
30-WhenThingsGoWrong/: AsyncExceptions.hs  OurException2.hs  OurExceptions.hs  WhySomeException.hs  (+1 more)
31-FinalProject/fingerd/: LICENSE  finger.db  fingerd.cabal
31-FinalProject/fingerd/src/: DatabaseTool.hs  Debug.hs  Main.hs
(+156 files in other folders)
