name:                fingerd
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/oskarek/fingerd#readme
license:             BSD3
license-file:        LICENSE
author:              Oskar Ek
maintainer:          oek@kth.se
copyright:           Copyright (c) 2017 Oskar Ek
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable debug
  ghc-options:        -Wall
  hs-source-dirs:     src
  main-is:            Debug.hs
  default-language:   Haskell2010
  build-depends:      base >= 4.7 && < 5
                    , network

executable fingerd
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , network
                     , raw-strings-qq
                     , safe
                     , sqlite-simple
                     , text

executable database-tool
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             DatabaseTool.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , raw-strings-qq
                     , safe
                     , sqlite-simple
                     , text
